Thu Jan  8 18:37:56 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* examples/Simple/time-date/Alt_Resource_Factory.h:
          Added check for TAO_AS_STATIC_LIBS for setting the export flags for
          proper building of static and dynamic libraries.

	* examples/Simple/time-date/Simple_time_date.mpc:
	  Pass idl flags for generating the export stuff

Thu Jan  8 17:52:38 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/orbsvcs/FtRtEvent/Utils/ftrtevent_export.h:
	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_export.h:
          Added check for TAO_AS_STATIC_LIBS for setting the export flags for
          proper building of static libraries.

Thu Jan  8 11:11:48 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_array/any_op_cs.cpp:

          Removed an unnecessary 'const' qualifier in the body of the
          Any inserting operator for arrays that was causing a warning
          with Tru64. Thanks to Johnny Willemsen <jwillemsen@remedy.nl>
          for reporting the problem.

Thu Jan  8 17:11:33 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/orbsvcs/FtRtEvent/ClientORB/ftrt_clientorb_export.h:
          Added check for TAO_AS_STATIC_LIBS for setting the export flags for
          proper building of static libraries.

Thu Jan  8 11:03:13 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/Fault_Notifier/FT_Notifier_i.cpp:

	  Fixed a warning due to wrong macro usage.

Thu Jan  8 16:46:11 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

	* TAO_IDL/tao_idl.mpc:
	  Added staticflags += TAO_AS_STATIC_LIBS to the TAO_IDL_EXE project
	  to fix link errors in the MSVC6 Static build

Thu Jan  8 07:44:14 2004  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/RT_Notification.mpc:
        * tao/BiDir_GIOP/BiDir_GIOP.mpc:
        * tao/Domain/Domain.mpc:
        * tao/DynamicAny/DynamicAny.mpc:
        * tao/DynamicInterface/DynamicInterface.mpc: